--- a/templates/home.html
+++ b/templates/home.html
@@ -6,27 +6,26 @@
 <div class="jumbotron">
   <h1>Bem-vindo ao DEX</h1>
   <p class="lead">UM CHATBOT PARA AUXÍLIO NO ATENDIMENTO EM INSTITUIÇÃO DE ENSINO SUPERIOR</p>
-  <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>-->
 </div>
 
 <body>
     <center>
       <h1>
         <img
-          src="https://image.flaticon.com/icons/svg/2040/2040946.svg"
-          alt="DEX"
-          style="width:80px;height:80px;"
-        />Seu Chatbot pessoal!
+            src="{{ url_for('static', filename='assets/images/robo.png') }}"
+            alt="DEX"
+            style="width:80px;height:80px;"
+        />
       </h1>
     </center>
 <div class="box"></div>
     <div class="boxed">
       <div>
         <div id="chatbox">
-          <img
-            src="https://image.flaticon.com/icons/svg/2040/2040946.svg"
-            alt="DEX"
-            style="width:80px;height:80px;"
+          <link
+            rel="shortcut icon"
+            type="image/x-icon"
+            href="{{ url_for('static', filename='assets/images/robo.png') }}"
           />
           <p class="botText">
             <span>Olá! Eu sou o DEX, seu ChatBot pessoal</span>
@@ -39,141 +38,92 @@
     </div>
   </body>
 
-  <!--<link rel="stylesheet" href="{{ url_for('static', filename="css/chat.css") }}">-->
-
   <link
     rel="shortcut icon"
     type="image/x-icon"
     href="https://image.flaticon.com/icons/svg/2040/2040946.svg"
   />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <style>
-    body {
-      font-family: monospace;
-    }
-
-    }
-    h3 {
-      color: black;
-      font-size: 20px;
-      margin-top: 3px;
-      text-align: center;
-    }
-    #chatbox {
-      margin-left: auto;
-      margin-right: auto;
-      width: 70%;
-      margin-top: 60px;
-    }
-    #userInput {
-      margin-left: auto;
-      margin-right: auto;
-      width: 70%;
-      margin-top: 60px;
-    }
-    #textInput {
-      width: 90%;
-      border: none;
-      border-bottom: 3px solid black;
-      font-family: monospace;
-      font-size: 17px;
-    }
-    .userText {
-      color: white;
-      font-family: monospace;
-      font-size: 17px;
-      text-align: right;
-      line-height: 30px;
-    }
-    .userText span {
-      background-color: #808080;
-      padding: 10px;
-      border-radius: 2px;
-    }
-    .botText {
-      color: white;
-      font-family: monospace;
-      font-size: 17px;
-      text-align: left;
-      line-height: 30px;
-    }
-    .botText span {
-      background-color: #4169e1;
-      padding: 10px;
-      border-radius: 2px;
-    }
-    #tidbit {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 300px;
-    }
-    .boxed {
-      margin-left: auto;
-      margin-right: auto;
-      width: 78%;
-      margin-top: 60px;
-      border: 1px solid green;
-    }
-    .box {
-      border: 2px solid black;
-    }
-  </style>
+      <style>
+        /* Adicione estas regras ao seu CSS existente */
+        
+        #chatbox {
+            min-height: 300px;
+            max-height: 500px;
+            overflow-y: auto;
+            padding: 10px;
+            background-color: #f5f5f5;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+        
+        .userText {
+            margin: 15px 0;
+            text-align: right;
+        }
+        
+        .botText {
+            margin: 15px 0;
+            text-align: left;
+        }
+        
+        #textInput {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: 2px solid #4169e1;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+        
+        #textInput:focus {
+            outline: none;
+            border-color: #3a5bcd;
+        }
+    </style>
   </head>
 
-
- <!--<script src="{{ url_for('static', filename="js/chat.js") }}"></script>>-->
-
  <script>
-         function getBotResponse() {
-           var rawText = $("#textInput").val();
-           var userHtml = '<p class="userText"><span>' + rawText + "</span></p>";
-           $("#textInput").val("");
-           $("#chatbox").append(userHtml);
-           document
-             .getElementById("userInput")
-             .scrollIntoView({ block: "start", behavior: "smooth" });
-           $.get("/get", { msg: rawText }).done(function(data) {
-             var botHtml = '<p class="botText"><span>' + data + "</span></p>";
-             $("#chatbox").append(botHtml);
-             document
-               .getElementById("userInput")
-               .scrollIntoView({ block: "start", behavior: "smooth" });
-           });
-         }
-         $("#textInput").keypress(function(e) {
-           if (e.which == 13) {
-             getBotResponse();
-           }
-         });
- </script>
-
-
-
-
-
-<!--<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Subheading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-    <h4>Subheading</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-  </div>
-
-  <div class="col-lg-6">
-    <h4>Subheading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-    <h4>Subheading</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-  </div>
-</div>-->
+  function getBotResponse() {
+      var rawText = $("#textInput").val();
+      if (rawText.trim() === "") return;
+      
+      var userHtml = '<p class="userText"><span>' + rawText + "</span></p>";
+      $("#textInput").val("");
+      $("#chatbox").append(userHtml);
+      document.getElementById("userInput").scrollIntoView({ block: "start", behavior: "smooth" });
+      
+      // Mostrar indicador de que o bot está digitando
+      var typingHtml = '<p class="botText"><span><i>DEX está digitando...</i></span></p>';
+      $("#chatbox").append(typingHtml);
+      
+      $.get("/get", { msg: rawText }).done(function(data) {
+          // Remover o "está digitando"
+          $("#chatbox").children().last().remove();
+          
+          // Extrair a resposta do JSON
+          var responseText = data.response || data;
+          if (typeof responseText !== 'string') {
+              responseText = JSON.stringify(responseText);
+          }
+          
+          var botHtml = '<p class="botText"><span>' + responseText + "</span></p>";
+          $("#chatbox").append(botHtml);
+          document.getElementById("userInput").scrollIntoView({ block: "start", behavior: "smooth" });
+      }).fail(function() {
+          // Remover o "está digitando" e mostrar erro
+          $("#chatbox").children().last().remove();
+          var botHtml = '<p class="botText"><span>Desculpe, ocorreu um erro ao processar sua mensagem.</span></p>';
+          $("#chatbox").append(botHtml);
+      });
+  }
+  
+  $("#textInput").keypress(function(e) {
+      if (e.which == 13) {
+          getBotResponse();
+      }
+  });
+</script>
 
 {% endblock %}
